--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@material/web": "^1.1.1",
+    "@mui/material": "^5.15.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,7 +22,6 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/react-router-dom": "^6.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -51,7 +54,6 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "node-sass": "^7.0.3",
     "postcss": "^8.4.32",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.3.0",
